--- a/src/binwalk/config/extract.conf
+++ b/src/binwalk/config/extract.conf
@@ -14,6 +14,7 @@
 #   o zlib
 #   o cpio
 #   o Raw LZMA/deflate streams
+#   o Hilink encrypted uImage firmware
 #   o D-Link "ROMFSv9.0" file systems
 #
 # There are also alternative extractors for the following file formats, implemented as plugins:
